--- a/books.html
+++ b/books.html
@@ -67,7 +67,7 @@
               </select>
             </div>
             <div class="books">
-
+              <i class="fas fa-spinner books__loading-spinner"></i>
             </div>
           </div>
         </div>
